src/test/ui/alloc-error/alloc-error-handler-bad-signature-1.stderr
error: return type should be `!`
  --> $DIR/alloc-error-handler-bad-signature-1.rs:12:6
   |
LL | ) -> ()
   |      ^^

error: argument should be `Layout`
  --> $DIR/alloc-error-handler-bad-signature-1.rs:11:11
   |
LL |     info: &Layout,
   |           ^^^^^^^

error: aborting due to 2 previous errors

